# PlacerWidget

./: README.md
cpp/: CMakeLists.txt  main.cpp  placerWidget.h
python/: convert.bat  main.py  placerWidget.py  ui_widgets.py
ruby/: convert.bat  main.rb  placerWidget.rb  widgets.rb
ui/: widgets.ui
